i changed the directories to the root folder

--- a/work/index.html
+++ b/work/index.html
@@ -189,7 +189,7 @@
         <ul>
           <li>
             <a
-              href="/rudigolab.github.io/index.html"
+              href="/index.html"
               data-new-state="intro"
               class="js-mob-nav-btn js-state-change"
               data-new-state="project"
@@ -198,7 +198,7 @@
           </li>
           <li>
             <a
-              href="/rudigolab.github.io/team/index.html"
+              href="/team/index.html"
               data-new-state="who"
               class="js-mob-nav-btn js-state-change"
               data-new-state="who"
@@ -207,7 +207,7 @@
           </li>
           <li>
             <a
-              href="/rudigolab.github.io/courses/index.html"
+              href="/courses/index.html"
               data-new-state="what"
               class="js-mob-nav-btn js-state-change"
               data-new-state="what"
@@ -216,7 +216,7 @@
           </li>
           <li>
             <a
-              href="/rudigolab.github.io/work/index.html"
+              href="/work/index.html"
               data-new-state="work"
               class="js-mob-nav-btn js-state-change"
               data-new-state="work"
@@ -304,7 +304,7 @@
       <ul class="main-nav js-main-nav flex-horiz">
         <li>
           <a
-            href="/rudigolab.github.io/index.html"
+            href="/index.html"
             class="nav-intro wiggle-link active"
             data-new-state="intro"
             >Intro<span class="wiggle"></span
@@ -312,7 +312,7 @@
         </li>
         <li>
           <a
-            href="/rudigolab.github.io/team/index.html"
+            href="/team/index.html"
             class="nav-who wiggle-link"
             data-new-state="who"
             >Team<span class="wiggle"></span
@@ -320,7 +320,7 @@
         </li>
         <li>
           <a
-            href="/rudigolab.github.io/courses/index.html"
+            href="/courses/index.html"
             class="nav-what wiggle-link"
             data-new-state="what"
             >Courses<span class="wiggle"></span
@@ -328,7 +328,7 @@
         </li>
         <li>
           <a
-            href="/rudigolab.github.io/work/index.html"
+            href="/work/index.html"
             class="nav-work wiggle-link"
             data-new-state="work"
             >Work<span class="wiggle"></span
