--- a/courses/index.html
+++ b/courses/index.html
@@ -207,7 +207,7 @@
           </li>
           <li>
             <a
-              href="../courses/index.html"
+              href="/courses/index.html"
               data-new-state="what"
               class="js-mob-nav-btn js-state-change"
               data-new-state="what"
@@ -320,7 +320,7 @@
         </li>
         <li>
           <a
-            href="../courses/index.html"
+            href="/courses/index.html"
             class="nav-what wiggle-link"
             data-new-state="what"
             >Courses<span class="wiggle"></span
