--- a/work/index.html
+++ b/work/index.html
@@ -216,7 +216,7 @@
           </li>
           <li>
             <a
-              href="../work/index.html"
+              href="/work/index.html"
               data-new-state="work"
               class="js-mob-nav-btn js-state-change"
               data-new-state="work"
@@ -328,7 +328,7 @@
         </li>
         <li>
           <a
-            href="../work/index.html"
+            href="/work/index.html"
             class="nav-work wiggle-link"
             data-new-state="work"
             >Work<span class="wiggle"></span
