--- a/team/index.html
+++ b/team/index.html
@@ -66,7 +66,7 @@
     <div>
         <ul>
             <li><a href="../index.html" data-new-state="intro" class="js-mob-nav-btn js-state-change" data-new-state="project">Intro</a></li>
-            <li><a href="../team/index.html" data-new-state="who" class="js-mob-nav-btn js-state-change" data-new-state="who">Team</a></li>
+            <li><a href="/team/index.html" data-new-state="who" class="js-mob-nav-btn js-state-change" data-new-state="who">Team</a></li>
             <li><a href="../courses/index.html" data-new-state="what" class="js-mob-nav-btn js-state-change" data-new-state="what">Courses</li>
             <li><a href="../work/index.html" data-new-state="work" class="js-mob-nav-btn js-state-change" data-new-state="work">Work</a></li>
         </ul>
@@ -112,7 +112,7 @@
           </a>
           <ul class="main-nav js-main-nav flex-horiz">
               <li><a href="../index.html" class="nav-intro wiggle-link active" data-new-state="intro">Intro<span class="wiggle"></span></a></li>
-              <li><a href="../team/index.html" class="nav-who wiggle-link" data-new-state="who">Team<span class="wiggle"></span></a></li>
+              <li><a href="/team/index.html" class="nav-who wiggle-link" data-new-state="who">Team<span class="wiggle"></span></a></li>
               <li><a href="../courses/index.html" class="nav-what wiggle-link" data-new-state="what">courses<span class="wiggle"></span></a></li>
               <li><a href="../work/index.html" class="nav-work wiggle-link" data-new-state="work">Work<span class="wiggle"></span></a></li>
           </ul>
