--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           </li>
           <li>
             <a
-              href="../team/index.html"
+              href="./team/index.html"
               data-new-state="who"
               class="js-mob-nav-btn js-state-change"
               data-new-state="who"
@@ -198,7 +198,7 @@
           </li>
           <li>
             <a
-              href="../courses/index.html"
+              href="./courses/index.html"
               data-new-state="what"
               class="js-mob-nav-btn js-state-change"
               data-new-state="what"
@@ -207,7 +207,7 @@
           </li>
           <li>
             <a
-              href="../work/index.html"
+              href="./work/index.html"
               data-new-state="work"
               class="js-mob-nav-btn js-state-change"
               data-new-state="work"
@@ -303,7 +303,7 @@
         </li>
         <li>
           <a
-            href="../team/index.html"
+            href="./team/index.html"
             class="nav-who wiggle-link"
             data-new-state="who"
             >Team<span class="wiggle"></span
@@ -311,7 +311,7 @@
         </li>
         <li>
           <a
-            href="../courses/index.html"
+            href="./courses/index.html"
             class="nav-what wiggle-link"
             data-new-state="what"
             >courses<span class="wiggle"></span
@@ -319,7 +319,7 @@
         </li>
         <li>
           <a
-            href="../work/index.html"
+            href="./work/index.html"
             class="nav-work wiggle-link"
             data-new-state="work"
             >Work<span class="wiggle"></span
