added new files

--- a/work.html
+++ b/work.html
@@ -404,7 +404,7 @@
             >
               <div class="work-project-content">
                 <a
-                  href="sam/index.html"
+                  href="work/sam/index.html"
                   class="js-view-project"
                   data-new-state="project"
                 >
@@ -428,7 +428,7 @@
             >
               <div class="work-project-content">
                 <a
-                  href="frank/index.html"
+                  href="work/frank/index.html"
                   class="js-view-project"
                   data-new-state="project"
                 >
@@ -452,7 +452,7 @@
             >
               <div class="work-project-content">
                 <a
-                  href="kifen/index.html"
+                  href="work/kifen/index.html"
                   class="js-view-project"
                   data-new-state="project"
                 >
@@ -476,7 +476,7 @@
             >
               <div class="work-project-content">
                 <a
-                  href="edono/index.html"
+                  href="work/edono/index.html"
                   class="js-view-project"
                   data-new-state="project"
                 >
@@ -500,7 +500,7 @@
             >
               <div class="work-project-content">
                 <a
-                  href="ikechi/index.html"
+                  href="work/ikechi/index.html"
                   class="js-view-project"
                   data-new-state="project"
                 >
@@ -524,7 +524,7 @@
             >
               <div class="work-project-content">
                 <a
-                  href="ikiloya/index.html"
+                  href="work/ikiloya/index.html"
                   class="js-view-project"
                   data-new-state="project"
                 >
@@ -548,7 +548,7 @@
             >
               <div class="work-project-content">
                 <a
-                  href="nd/index.html"
+                  href="work/nd/index.html"
                   class="js-view-project"
                   data-new-state="project"
                 >
@@ -572,7 +572,7 @@
             >
               <div class="work-project-content">
                 <a
-                  href="jason/index.html"
+                  href="work/jason/index.html"
                   class="js-view-project"
                   data-new-state="project"
                 >
@@ -596,7 +596,7 @@
             >
               <div class="work-project-content">
                 <a
-                  href="perrie/index.html"
+                  href="work/perrie/index.html"
                   class="js-view-project"
                   data-new-state="project"
                 >
@@ -620,7 +620,7 @@
             >
               <div class="work-project-content">
                 <a
-                  href="v76-by-vaughn/index.html"
+                  href="work/v76-by-vaughn/index.html"
                   class="js-view-project"
                   data-new-state="project"
                 >
