--- a/work/edono/index.html
+++ b/work/edono/index.html
@@ -69,10 +69,10 @@
 <div class="mob-nav js-mob-nav" data-active="off">
     <div>
         <ul>
-            <li><a href="../../index.html" data-new-state="intro" class="js-mob-nav-btn js-state-change" data-new-state="project">Intro</a></li>
-            <li><a href="../../who/index.html" data-new-state="who" class="js-mob-nav-btn js-state-change" data-new-state="who">Who</a></li>
-            <li><a href="../../what/index.html" data-new-state="what" class="js-mob-nav-btn js-state-change" data-new-state="what">What</a></li>
-            <li><a href="../index.html" data-new-state="work" class="js-mob-nav-btn js-state-change" data-new-state="work">Work</a></li>
+            <li><a href="/index.html" data-new-state="intro" class="js-mob-nav-btn js-state-change" data-new-state="project">Intro</a></li>
+            <li><a href="/team.html" data-new-state="who" class="js-mob-nav-btn js-state-change" data-new-state="who">Who</a></li>
+            <li><a href="/courses.html" data-new-state="what" class="js-mob-nav-btn js-state-change" data-new-state="what">What</a></li>
+            <li><a href="/work.html" data-new-state="work" class="js-mob-nav-btn js-state-change" data-new-state="work">Work</a></li>
         </ul>
     </div>
     <div>
@@ -115,10 +115,10 @@
               </ul>
           </a>
           <ul class="main-nav js-main-nav flex-horiz">
-              <li><a href="../../index.html" class="nav-intro wiggle-link active" data-new-state="intro">Intro<span class="wiggle"></span></a></li>
-              <li><a href="../../who/index.html" class="nav-who wiggle-link" data-new-state="who">Who<span class="wiggle"></span></a></li>
-              <li><a href="../../what/index.html" class="nav-what wiggle-link" data-new-state="what">What<span class="wiggle"></span></a></li>
-              <li><a href="../index.html" class="nav-work wiggle-link" data-new-state="work">Work<span class="wiggle"></span></a></li>
+              <li><a href="/index.html" class="nav-intro wiggle-link active" data-new-state="intro">Intro<span class="wiggle"></span></a></li>
+              <li><a href="/team.html" class="nav-who wiggle-link" data-new-state="who">Who<span class="wiggle"></span></a></li>
+              <li><a href="/courses.html" class="nav-what wiggle-link" data-new-state="what">What<span class="wiggle"></span></a></li>
+              <li><a href="/work.html" class="nav-work wiggle-link" data-new-state="work">Work<span class="wiggle"></span></a></li>
           </ul>
           <div class="nav-contact">
               <a class="js-open-contact wiggle-link" href="#">Contact<span class="wiggle"></span></a>
@@ -259,7 +259,7 @@ Was it an easy journey? Not in your smallest imagination... but was it worth it.
                     </div>
 </footer>              </div>
 
-              <a href="../index.html" class="project-back corner-project-back lone-arrow js-state-change" data-new-state="work">
+              <a href="/work.html" class="project-back corner-project-back lone-arrow js-state-change" data-new-state="work">
                   <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
                   <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
                   <span class="text">Back to Projects</span>
