--- a/courses.html
+++ b/courses.html
@@ -543,8 +543,8 @@
             <div class="mob-jon mob-figure"></div>
             <div class="content">
               <div class="content">
-                <h3 class="no-line">Front End</h3>
-                <h1>Web Development.</h1>
+                <h3 class="no-line">Web Development</h3>
+                <h1>Front End</h1>
                 <h4>
                   A hands-on creative with more than 16 years design experience.
                 </h4>
@@ -559,8 +559,9 @@
                   JavaScript.
                 </p>
                 <br />
+                <!-- href="https://bit.ly/joinrudigo" -->
                 <a
-                  href="https://bit.ly/joinrudigo"
+                  href="courses/front-end.html"
                   class="box-arrow-link"
                   data-new-state="work"
                 >
@@ -592,8 +593,8 @@
             <div class="mob-jon mob-figure"></div>
             <div class="content">
               <div class="content">
-                <h3 class="no-line">Back End</h3>
-                <h1>Web Development.</h1>
+                <h3 class="no-line">Web Development</h3>
+                <h1>Back End</h1>
                 <h4>
                   A hands-on creative with more than 16 years design experience.
                 </h4>
@@ -608,7 +609,7 @@
                 </p>
                 <br />
                 <a
-                  href="https://bit.ly/joinrudigo"
+                  href="courses/back-end.html"
                   class="box-arrow-link"
                   data-new-state="work"
                 >
