--- a/courses/front-end.html
+++ b/courses/front-end.html
@@ -10,10 +10,10 @@
 
 
 </head> -->
-
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Rudigo&#174; is an academy specializing in building Next level techies.">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
   <meta property="og:title" content="Rudigo&#174;" />
