--- a/courses/front-end.html
+++ b/courses/front-end.html
@@ -68,7 +68,7 @@
       id="page-content"
       data-active="off"
     >
-    <a href="/courses.html" class="project-back corner-project-back lone-arrow js-state-change" data-new-state="work">
+    <a href="/work.html" class="project-back corner-project-back lone-arrow js-state-change" data-new-state="work">
       <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
       <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
       <span class="text">Back to Courses</span>
