--- a/courses.html
+++ b/courses.html
@@ -658,7 +658,7 @@
 
                 <br />
                 <a
-                  href="https://bit.ly/joinrudigo"
+                  href="courses/mobile.html"
                   class="box-arrow-link"
                   data-new-state="work"
                 >
@@ -713,7 +713,7 @@
                 <br />
                 <h4>In collaboration with Motif</h4>
                 <a
-                  href="https://bit.ly/joinrudigo"
+                  href="courses/ui-ux.html"
                   class="box-arrow-link"
                   data-new-state="work"
                 >
@@ -759,7 +759,7 @@
                 </p>
                 <br />
                 <a
-                  href="https://bit.ly/joinrudigo"
+                  href="courses/data-analysis.html"
                   class="box-arrow-link"
                   data-new-state="work"
                 >
@@ -813,7 +813,7 @@
                 <br />
                 <h4>In collaboration with helixgade</h4>
                 <a
-                  href="https://bit.ly/joinrudigo"
+                  href="courses/pm.html"
                   class="box-arrow-link"
                   data-new-state="work"
                 >
