--- a/courses/front-end.html
+++ b/courses/front-end.html
@@ -7,6 +7,22 @@
   <title>Front End Web Development</title>
 
   <link rel="stylesheet" href="courses.css">
+  <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon-16x16.png">
   <script src="https://kit.fontawesome.com/ad0d56fe3e.js" crossorigin="anonymous"></script>
 </head>
 <body>
