--- a/courses/ui-ux.html
+++ b/courses/ui-ux.html
@@ -29,7 +29,7 @@
   <div style="display: flex; justify-content: flex-end; margin-top: 2rem; margin-right: 2rem;">
     <div style="display: flex;">
       
-      <a href="/courses.html" class="back-to-courses-link">
+      <a href="../courses.html" class="back-to-courses-link">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 back-icon" style="height: 1rem; width: 1rem; margin-right:0.5rem" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
         </svg>
