--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
             <div class="content">
               <h1>Past<br />Students</h1>
               <a
-                href="work/index.html"
+                href="work.html"
                 class="box-arrow-link js-state-change"
                 data-new-state="work"
               >
