fixed an issue 6

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                 "
               >
                 <a
-                  href="work/nerd/index.html"
+                  href="team.html"
                   class="project-thumb-hover js-state-change"
                   data-new-state="project"
                 >
@@ -516,7 +516,7 @@
                 "
               >
                 <a
-                  href="work/toggl/index.html"
+                  href="team.html"
                   class="project-thumb-hover js-state-change"
                   data-new-state="project"
                 >
@@ -537,7 +537,7 @@
                 "
               >
                 <a
-                  href="work/toggl/index.html"
+                  href="team.html"
                   class="project-thumb-hover js-state-change"
                   data-new-state="project"
                 >
