fixed an issue 7

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                 aspirants who know nothing about coding, learn a coding skill,
                 practice what is learnt and start building projects in no time.
                 Rudigo's Trainig method allows intermediate students to sharpens
-                their coding skills and increase their earning potentiual. Our
+                their coding skills and increase their earning potential. Our
                 curriculum is drafted by experts in the industry and aimed at
                 improving code learning ability.
               </p>
@@ -496,7 +496,7 @@
               >
                 <a
                   href="team.html"
-                  class="project-thumb-hover js-state-change"
+                  class="project-thumb-hover"
                   data-new-state="project"
                 >
                   <span class="project-thumb-hover-inner">
@@ -517,7 +517,7 @@
               >
                 <a
                   href="team.html"
-                  class="project-thumb-hover js-state-change"
+                  class="project-thumb-hover"
                   data-new-state="project"
                 >
                   <span class="project-thumb-hover-inner">
@@ -538,7 +538,7 @@
               >
                 <a
                   href="team.html"
-                  class="project-thumb-hover js-state-change"
+                  class="project-thumb-hover"
                   data-new-state="project"
                 >
                   <span class="project-thumb-hover-inner">
