--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
               >
                 <a
                   href="team.html"
-                  class="project-thumb-hover"
+                  class="project-thumb-hover js-state-change"
                   data-new-state="project"
                 >
                   <span class="project-thumb-hover-inner">
@@ -517,7 +517,7 @@
               >
                 <a
                   href="team.html"
-                  class="project-thumb-hover"
+                  class="project-thumb-hover js-state-change"
                   data-new-state="project"
                 >
                   <span class="project-thumb-hover-inner">
@@ -538,7 +538,7 @@
               >
                 <a
                   href="team.html"
-                  class="project-thumb-hover"
+                  class="project-thumb-hover js-state-change"
                   data-new-state="project"
                 >
                   <span class="project-thumb-hover-inner">
