--- a/work.html
+++ b/work.html
@@ -452,7 +452,7 @@
             >
               <div class="work-project-content">
                 <a
-                  href="/work/kifen/index.html"
+                  href="work/kifen/index.html"
                   class="js-view-project"
                   data-new-state="project"
                 >
