--- a/work/kifen/index.html
+++ b/work/kifen/index.html
@@ -293,7 +293,7 @@
   <div class="full-size pos-a-t-l"><div class="ledge ledge-minus-16-deg"></div></div>
 
   <div class="contact-modal-content">
-    <h4 class="no-line">Contact us</h4>
+    <h4 class="no-line">Contact Us</h4>
     <a href="mailto:hello@toyfight.co" class="huge-text underline-link js-cursor-follower-active"><span>hello@toyfight.co</span></a>
   </div>
 
