--- a/work/perrie/index.html
+++ b/work/perrie/index.html
@@ -252,7 +252,7 @@
   <div class="full-size pos-a-t-l"><div class="ledge ledge-minus-16-deg"></div></div>
 
   <div class="contact-modal-content">
-    <h4 class="no-line">Contact us</h4>
+    <h4 class="no-line">Contact Us</h4>
     <a href="mailto:hello.rudigo@gmail.com" class="huge-text underline-link js-cursor-follower-active"><span>hello.rudigo@gmail.com</span></a>
   </div>
 
