--- a/work/kifen/index.html
+++ b/work/kifen/index.html
@@ -219,7 +219,7 @@
 </div>
 <div class="project-block image-overhang-content" data-bg-color="#FFF">
     <div class="content">
-        <h2>More words..</h2>
+        <h2>More words...</h2>
         <p><span style="font-weight: 400;">After 6 months at Rudigo, 
             I continued on that path of software development.  
             So far I’ve worked in different places as a backend engineer,
@@ -244,7 +244,7 @@
 
 
 <div class="project-footer">
-    <div class="pos-a-t-l full-size project-footer-img" style="background-image: url('../kifen/footer-2500x794.jpg');"></div>
+    <div class="pos-a-t-l full-size project-footer-img" style="background-image: url('https://i.im.ge/2022/07/16/FXSQk4.jpg');"></div>
     <h1>Kifen</h1>
             <a href="../../work/edono/index.html" title="Candid" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="261">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
