--- a/work/ikiloya/index.html
+++ b/work/ikiloya/index.html
@@ -256,7 +256,7 @@
                     </div>
 </footer>              </div>
 
-              <a href="../index.html" class="project-back corner-project-back lone-arrow js-state-change" data-new-state="work">
+              <a href="../../work.html" class="project-back corner-project-back lone-arrow js-state-change" data-new-state="work">
                   <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
                   <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
                   <span class="text">Back to Profile</span>
