--- a/work/ikiloya/index.html
+++ b/work/ikiloya/index.html
@@ -68,10 +68,10 @@
 <div class="mob-nav js-mob-nav" data-active="off">
     <div>
         <ul>
-            <li><a href="../../index.html" data-new-state="intro" class="js-mob-nav-btn js-state-change" data-new-state="project">Intro</a></li>
-            <li><a href="../../who/index.html" data-new-state="who" class="js-mob-nav-btn js-state-change" data-new-state="who">Who</a></li>
-            <li><a href="../../what/index.html" data-new-state="what" class="js-mob-nav-btn js-state-change" data-new-state="what">What</a></li>
-            <li><a href="../index.html" data-new-state="work" class="js-mob-nav-btn js-state-change" data-new-state="work">Work</a></li>
+            <li><a href="index.html" data-new-state="intro" class="js-mob-nav-btn js-state-change" data-new-state="project">Intro</a></li>
+            <li><a href="team.html" data-new-state="who" class="js-mob-nav-btn js-state-change" data-new-state="who">Team</a></li>
+            <li><a href="courses.html" data-new-state="what" class="js-mob-nav-btn js-state-change" data-new-state="what">Courses</a></li>
+            <li><a href="work.html" data-new-state="work" class="js-mob-nav-btn js-state-change" data-new-state="work">Work</a></li>
         </ul>
     </div>
     <div>
@@ -114,10 +114,10 @@
               </ul>
           </a>
           <ul class="main-nav js-main-nav flex-horiz">
-              <li><a href="../../index.html" class="nav-intro wiggle-link active" data-new-state="intro">Intro<span class="wiggle"></span></a></li>
-              <li><a href="../../who/index.html" class="nav-who wiggle-link" data-new-state="who">Who<span class="wiggle"></span></a></li>
-              <li><a href="../../what/index.html" class="nav-what wiggle-link" data-new-state="what">What<span class="wiggle"></span></a></li>
-              <li><a href="../index.html" class="nav-work wiggle-link" data-new-state="work">Work<span class="wiggle"></span></a></li>
+              <li><a href="index.html" class="nav-intro wiggle-link active" data-new-state="intro">Intro<span class="wiggle"></span></a></li>
+              <li><a href="team.html" class="nav-who wiggle-link" data-new-state="who">Team<span class="wiggle"></span></a></li>
+              <li><a href="courses.html" class="nav-what wiggle-link" data-new-state="what">Courses<span class="wiggle"></span></a></li>
+              <li><a href="work.html" class="nav-work wiggle-link" data-new-state="work">Work<span class="wiggle"></span></a></li>
           </ul>
           <div class="nav-contact">
               <a class="js-open-contact wiggle-link" href="#">Contact<span class="wiggle"></span></a>
