--- a/work/sam/index.html
+++ b/work/sam/index.html
@@ -235,7 +235,7 @@ start and also advance your tech career.</span></p>
 <div class="project-footer">
     <div class="pos-a-t-l full-size project-footer-img" style="background-image: url('toggl-footer-2500x794.jpg');"></div>
     <h1>Sammy</h1>
-            <a href="../frank/index.html" title="Nerd" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="291">
+            <a href="../../work/frank/index.html" title="Nerd" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="291">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Prev Profile</span>
