--- a/work/edono/index.html
+++ b/work/edono/index.html
@@ -232,13 +232,13 @@ Was it an easy journey? Not in your smallest imagination... but was it worth it.
     <h1>Morrison</h1>
 
     
-            <a href="../ikechi/index.html" title="Journey Further" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="173">
+            <a href="../../work/ikechi/index.html" title="Journey Further" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="173">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Prev Profile</span>
         </a>
     
-            <a href="../kifen/index.html" title="Open Continents" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="234">
+            <a href="../../work/kifen/index.html" title="Open Continents" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="234">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Next profile</span>
