--- a/work/frank/index.html
+++ b/work/frank/index.html
@@ -226,13 +226,13 @@
     <h1>Franklin</h1>
 
     
-            <a href="../open-continents/index.html" title="Open Continents" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="234">
+            <a href="../../work/kifen/index.html" title="Open Continents" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="234">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Prev Profile</span>
         </a>
     
-            <a href="../toggl/index.html" title="Toggl" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="162">
+            <a href="../../work/sam/index.html" title="Toggl" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="162">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Next profile</span>
