--- a/work/ikechi/index.html
+++ b/work/ikechi/index.html
@@ -220,13 +220,13 @@
     <h1>Ikechi</h1>
 
     
-            <a href="../eddie/index.html" title="Eddie" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="200">
+            <a href="../../work/ikiloya/index.html" title="Eddie" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="200">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Prev Profile</span>
         </a>
     
-            <a href="../candid/index.html" title="Candid" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="261">
+            <a href="../../work/edono/index.html" title="Candid" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="261">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Next profile</span>
