--- a/work/ikiloya/index.html
+++ b/work/ikiloya/index.html
@@ -229,13 +229,13 @@
     <h1>Loya</h1>
 
     
-            <a href="../arts-council/index.html" title="Arts Council" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="315">
+            <a href="../../work/nd/index.html" title="Arts Council" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="315">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Prev Profile</span>
         </a>
     
-            <a href="../journey-further/index.html" title="Journey Further" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="173">
+            <a href="../../work/ikechi/index.html" title="Journey Further" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="173">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Next profile</span>
