--- a/work/jason/index.html
+++ b/work/jason/index.html
@@ -209,13 +209,13 @@
     <h1>Jason</h1>
 
     
-            <a href="../perrie/index.html" title="Salomon" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="303">
+            <a href="../../work/perrie/index.html" title="Salomon" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="303">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Prev Profile</span>
         </a>
     
-            <a href="../nd/index.html" title="Arts Council" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="315">
+            <a href="../../work/nd/index.html" title="Arts Council" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="315">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Next profile</span>
