--- a/work/perrie/index.html
+++ b/work/perrie/index.html
@@ -205,13 +205,13 @@
     <h1>Perrie</h1>
 
     
-            <a href="../v76-by-vaughn/index.html" title="V76 by Vaughn" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="17">
+            <!-- <a href="../v76-by-vaughn/index.html" title="V76 by Vaughn" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="17">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Prev Profile</span>
-        </a>
+        </a> -->
     
-            <a href="../psg/index.html" title="PSG" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="245">
+            <a href="../../work/jason/index.html" title="PSG" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="245">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Next profile</span>
