--- a/work/ikechi/index.html
+++ b/work/ikechi/index.html
@@ -216,7 +216,7 @@
 
 
 <div class="project-footer">
-    <div class="pos-a-t-l full-size project-footer-img" style="background-image: url('jf-footer-1980x629.jpg');"></div>
+    <div class="pos-a-t-l full-size project-footer-img" style="background-image: url('https://i.im.ge/2022/07/16/FXsBXC.jpg');"></div>
     <h1>Ikechi</h1>
 
     
