--- a/work/ikiloya/index.html
+++ b/work/ikiloya/index.html
@@ -208,7 +208,7 @@
         <h2>Final words</h2>
         <p>I am greatly indebted to Rudigo for the opportunity I had and would highly recommend it to anyone looking to kickstart their IT journey.</p>
     </div>
-    <img src='.https://i.im.ge/2022/07/16/FXsHpM.png' alt='' width='h' height='h' /></div>
+    <img src='https://i.im.ge/2022/07/16/FXsHpM.png' alt='' width='h' height='h' /></div>
 
 <div class="project-block image-alone-full-width-block">
     </div><!-- FULL SCREEN IMAGE -->
