--- a/work/sam/index.html
+++ b/work/sam/index.html
@@ -285,7 +285,7 @@ start and also advance your tech career.</span></p>
 </footer>              
 </div>
 
-    <a href="../index.html" class="project-back corner-project-back lone-arrow js-state-change" data-new-state="work">
+    <a href="../../work.html" class="project-back corner-project-back lone-arrow js-state-change" data-new-state="work">
       <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
      <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
      <span class="text">Back to Profile</span>
