--- a/work/sam/index.html
+++ b/work/sam/index.html
@@ -235,11 +235,11 @@ start and also advance your tech career.</span></p>
 <div class="project-footer">
     <div class="pos-a-t-l full-size project-footer-img" style="background-image: url('https://i.im.ge/2022/07/16/FXaE0C.jpg');"></div>
     <h1>Sammy</h1>
-            <a href="../../work/frank/index.html" title="Nerd" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="291">
+            <!-- <a href="../../work/frank/index.html" title="Nerd" class="project-footer-prev-project project-back project-back-reverse lone-arrow js-state-change" data-new-state="project" data-new-id="291">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Prev Profile</span>
-        </a>
+        </a> -->
     
     array(10) {
   [0]=>
@@ -263,11 +263,11 @@ start and also advance your tech career.</span></p>
   [9]=>
   int(17)
 }
-        <!-- <a href="../v76-by-vaughn/index.html" title="" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="17">
+        <a href="../../work/frank/index.html" title="" class="project-footer-next-project project-back right-arrow lone-arrow js-state-change" data-new-state="project" data-new-id="17">
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
             <span class="text">Next project</span>
-        </a> -->
+        </a>
     </div>
 <footer class="js-monitor-scroll condensed">
     <div class="footer-footer pos-a-b-l">
