checking a link in index

--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@
               >
                 <a
                   href="team.html"
-                  class="project-thumb-hover js-state-change"
-                  data-new-state="project"
+                  class="project-thumb-hover js-state-change nav-who wiggle-link"
+                  data-new-state="who"
                 >
                   <span class="project-thumb-hover-inner">
                     <h4>Ayaosi Godfrey</h4>
@@ -517,8 +517,8 @@
               >
                 <a
                   href="team.html"
-                  class="project-thumb-hover js-state-change"
-                  data-new-state="project"
+                  class="project-thumb-hover js-state-change "
+                  data-new-state="who"
                 >
                   <span class="project-thumb-hover-inner">
                     <h4>Arerosuoghene Wisdom</h4>
@@ -539,7 +539,7 @@
                 <a
                   href="team.html"
                   class="project-thumb-hover js-state-change"
-                  data-new-state="project"
+                  data-new-state="who"
                 >
                   <span class="project-thumb-hover-inner">
                     <h4>Godfrey</h4>
