fixed a css/js issue in the index page

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
               >
                 <a
                   href="team.html"
-                  class="project-thumb-hover js-state-change "
+                  class="project-thumb-hover js-state-change nav-who wiggle-link"
                   data-new-state="who"
                 >
                   <span class="project-thumb-hover-inner">
@@ -538,7 +538,7 @@
               >
                 <a
                   href="team.html"
-                  class="project-thumb-hover js-state-change"
+                  class="project-thumb-hover js-state-change nav-who wiggle-link"
                   data-new-state="who"
                 >
                   <span class="project-thumb-hover-inner">
