--- a/work/edono/index.html
+++ b/work/edono/index.html
@@ -262,7 +262,7 @@ Was it an easy journey? Not in your smallest imagination... but was it worth it.
               <a href="../../work.html" class="project-back corner-project-back lone-arrow js-state-change" data-new-state="work">
                   <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
                   <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
-                  <span class="text">Back to Projects</span>
+                  <span class="text">Back to Profiles</span>
               </a>
 
           </div>
