--- a/work/nd/index.html
+++ b/work/nd/index.html
@@ -250,7 +250,7 @@
               <a href="../../work.html" class="project-back corner-project-back lone-arrow js-state-change" data-new-state="work">
                   <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
                   <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
-                  <span class="text">Back to Profile</span>
+                  <span class="text">Back to Profiles</span>
               </a>
 
           </div>
