--- a/work/sam/index.html
+++ b/work/sam/index.html
@@ -288,7 +288,7 @@ start and also advance your tech career.</span></p>
     <a href="../../work.html" class="project-back corner-project-back lone-arrow js-state-change" data-new-state="work">
       <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
      <span class="arrow"><span class="arrow-tip"></span><span class="arrow-length"></span></span>
-     <span class="text">Back to Profile</span>
+     <span class="text">Back to Profiles</span>
     </a>
 
     </div>
