fixed an issue on kifen's index.html page

--- a/work/kifen/index.html
+++ b/work/kifen/index.html
@@ -96,7 +96,7 @@
       </ul>
 
       <nav class="pos-f js-watch-state" data-state="project" data-active="off">
-          <a href="index.html" class="logo logo-shield-wrap js-nav-logo js-watch-foreground-color" data-new-state="intro" data-color-state="black">
+          <a href="../../index.html" class="logo logo-shield-wrap js-nav-logo js-watch-foreground-color" data-new-state="intro" data-color-state="black">
               <ul class="logo-shield pos-a-t-l full-size">
                   <li></li>
                   <li></li>
